--- a/mantenimiento/Template/mantenimiento/form_generica.html
+++ b/mantenimiento/Template/mantenimiento/form_generica.html
@@ -1,10 +1,11 @@
-{% extends "base_generica.html"}
+{% extends "base_generica.html"%}
+
 {% block content%}
 
-<from action ="" method= "post">
-    {% csrf_token%}
-    <table>
-    {{form}}
-    </table>
+    <from action ="" method= "post">
+        {% csrf_token%}
+        <table>
+        {{form}}
+        </table>
     <imput type="submit" value="submit"/>
 {%endblock%}
