--- a/mantenimiento/Template/mantenimiento/form_generica.html
+++ b/mantenimiento/Template/mantenimiento/form_generica.html
@@ -1,11 +1,13 @@
 {% extends "base_generica.html"%}
 
 {% block content%}
-
-    <from action ="" method= "post">
+    <p> formulario generico</p>
+    <from action ="/your-name/" method= "post">
         {% csrf_token%}
         <table>
         {{form}}
-        </table>
-    <imput type="submit" value="submit"/>
+      </table>
+      <input type="submit" value="Submit">
+    </form>
+    <p>fin formulario generico</p>
 {%endblock%}
