--- a/notascomunicacion/Template/notascomunicacion/base_generica.html
+++ b/notascomunicacion/Template/notascomunicacion/base_generica.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
+  titulo de base generica
 </head>
 <body>
     {% block content %}
@@ -9,4 +9,3 @@
 </body>
 
 </html>
-
