--- a/notascomunicacion/Template/notascomunicacion/form_generica.html
+++ b/notascomunicacion/Template/notascomunicacion/form_generica.html
@@ -1,11 +1,11 @@
 {% extends "base_generica.html"%}
 
 {% block content%}
-
-    <from action ="" method= "post">
-        {% csrf_token%}
-        <table>
-        {{form}}
-        </table>
-    <imput type="submit" value="submit"/>
+  <p> formulario generico</p>
+    <form action="" method="post">
+    {% csrf_token %}
+    {{ form.as_table }}
+    <input type="submit" value="Submit">
+    </form>
+  <p>fin formulario generico</p>
 {%endblock%}
