--- a/mantenimiento/Template/mantenimiento/form_generica.html
+++ b/mantenimiento/Template/mantenimiento/form_generica.html
@@ -1,13 +1,13 @@
-{% extends "base_generica.html"%}
-
-{% block content%}
+<html>
+{% extends "base_generica.html"%}{% block content%}
   <p> formulario generico</p>
     <form action="" method="post">
     {% csrf_token %}
-    <table>
-    {{ form }}
-    <table>
+
+    {{ form.as_table }}
+
     <input type="submit" value="Submit">
     </form>
   <p>fin formulario generico</p>
 {%endblock%}
+</html>
