--- a/mantenimiento/Template/mantenimiento/home.html
+++ b/mantenimiento/Template/mantenimiento/home.html
@@ -28,7 +28,7 @@ tr:nth-child(even) {
 <p>home page</p>
 <a href="http://127.0.0.1:8000/admin">Admin</a>
 <a href="http://127.0.0.1:8000/mantenimiento/cliente">lista de servicios</a>
-<a href="http://127.0.0.1:8000/mantenimiento/contactos">Contactos</a>
+<a href="http://127.0.0.1:8000/mantenimiento/LContacto">Contacto</a>
 
 <a href="https://mail.anlis.gov.ar/">Zimbra Anlis</a>
 <a href="http://127.0.0.1:8000/preventivo/home">Preventivos</a>
