subiendo bien notas de comunicacion

--- a/notascomunicacion/Template/notascomunicacion/form_generica.html
+++ b/notascomunicacion/Template/notascomunicacion/form_generica.html
@@ -3,7 +3,7 @@
 
 {% block content%}
   <p> formulario generico</p>
-    <form action="" method="post">
+    <form action="" method="post" enctype="multipart/form-data">
     {% csrf_token %}
 
     {{ form.as_table }}
