--- a/mantenimiento/Template/mantenimiento/home.html
+++ b/mantenimiento/Template/mantenimiento/home.html
@@ -27,7 +27,8 @@ tr:nth-child(even) {
 <body>
 <p>home page</p>
 <a href="https://mail.anlis.gov.ar/">Zimbra Anlis</a>
-<a href="http://127.0.0.1:8000/admin" >Admin  </a>
+<a href="http:admin/" >Admin  </a>
+<a href="http://10.10.39.1" >SCADA  </a>
 <a href="{% url 'cliente' %}" >lista de servicios  </a>
 <a href="{% url 'AltaContacto' %}" >Alta de contactos  </a>
 <a href="{% url 'ListarContacto' %}" >lista de contactos  </a>
