notas de comunicacion despachada

--- a/notascomunicacion/Template/notascomunicacion/listNotasComunicacion.html
+++ b/notascomunicacion/Template/notascomunicacion/listNotasComunicacion.html
@@ -19,7 +19,7 @@
         <td>{{nota.asunto}}</td>
         <td>{{nota.resumen}}</td>
         <td>
-          <a href="{{nota.file}}" class="btn btn-primary btn-smt" target="_blank">
+          <a href="http:/media/{{nota.file}}" class="btn btn-primary btn-smt" target="_blank">
             {{nota.file}}
           </a>
         </td>
